# local-notes-taker

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: audio_cleanup.py  main.py  ollama_manager.py  output.py  recorder.py  summarizer.py  transcriber.py
